Make path copyable via Path.copy()
Also change DTO translation to work with the field rather than the public API.